Fix overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,8 @@ header {
     padding: 0;
     margin: 0;
     width: 500px;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
@@ -17,6 +19,7 @@ footer {
   padding: 20px;
   min-width: 400px;
   width: auto;
+  margin-top: auto;
 }
 .container {
   margin-left: 40px;
